/**
 * Interface que define o contrato para leitores de dados
 * Esta é a interface que nossa aplicação espera
 */
public interface LeitorDados {
    /**
     * Lê dados e retorna uma string formatada
     * @return String com os dados lidos
     */
    String lerDados();
} 